--- a/.dbeaver/project-metadata.json
+++ b/.dbeaver/project-metadata.json
@@ -1,1 +1,1 @@
-{"resources":{"Scripts/Script.sql":{"default-datasource":"oracle_thin-1850fbc679f-26a4ac12c03debca","default-schema":"JAVASE"}}}
+{"resources":{"Scripts/DietDiary.sql":{"default-schema":"JAVASE","default-datasource":"oracle_thin-1850fbc679f-26a4ac12c03debca"}}}
