--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/DietDiary"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/dietdiary"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
